# SmartScrib

./: Readme.md
backend/: main.py  pyproject.toml
backend/api/: health.py
backend/config/: settings.py
backend/core/: __init__.py  logging.py
backend/schemas/: classifier.py  modes.py  session.py
