[project]
name = "smartscribe"
version = "0.1.0"
description = "SmartScribe — Conversational Document Agent"
authors = [
    {name = "Arpit Shukla",email = "shuklarpit2015@gmail.com"}
]
requires-python = ">=3.12.3, <4.0.0"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "reportlab (>=4.4.10,<5.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]   # E=pycodestyle, F=pyflakes, I=isort

[tool.mypy]
python_version = "3.11"
strict = false             # set true later when codebase matures
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
